﻿v1.6.0

* New: Created Nightmare Tide base directory structure.
* New: Added Nightmare Tide tab to the Instance selector.
* New: Created Nightmare Tide menu infrastructure (id = NT) for instances.

----
v1.5.9

Tier 3
* New: Bindings of Blood: Maelforge (By Apuch@Zaviel & Lifeismystery@Galidra)
* New: Bindings of Blood: Laethys (By Apuch@Zaviel)
* New: Bindings of Blood: Greenscale (By Lupercal@Brisesol)
* New: Bindings of Blood: Akylios (By Lupercal@Brisesol)

LibSUnit
* Change: Reworked some of the Raid/Group handling code and also optimized it a little.

LibSCast
* Fixed: Error 1280 (nil UnitObj). Now has checking to ensure Object exists.

Tier 1 Raids
* Increased all enrage timers by 2 minutes.

Tier 2 Raids
* Increased all enrage timers by 1 minute.

----
v1.5.8

LibSUnit (Safe's Unit Lib) 
* Fixed: Error 1120, which could possibly cause raid tracking issues.
* Optimized: Reworked raid tracking code to be more streamlined.

Menu
* Changed: Reworked menu code to be better separated from the main code.
* New: Started work on new Drop Down menu items.

LibSGui (Safe's GUI Lib)
* New: Added new Drop Down graphics and initial code base.

Res Master (Thanks to RePyH1 on Curse for the Ids)
* New: Added Warrior combat res: Soul Redemption
* New: Added Rogue combat res: Kiss of life

Ready Check
* New: Added Wind Sigil for Clerics. (Sorry it took so long, I feel bad)

Raids
* Planebreaker Bastion
** New: Encounter support for Inyr'Kta (By Noshei)
** New: Encounter support for Abominus (By Noshei)

Experts
* Archive of Flesh
** Emphareal
*** Added: Alert for Flood the Halls (Warning)
*** Added: Alert for Flood the Halls (Duration)

Dungeons
* Archive of Flesh
** Emphareal
*** Added: Alert for Flood the Halls (Warning)
*** Added: Alert for Flood the Halls (Duration)
** Ahzrius
*** Added: Alert for Drastic Renovations.

----
v1.5.7

Raids
* Planebreaker Bastion
** Thrax
*** Fixed: File Encoding to UTF-8

Slivers
* Intrepid Drowned Halls
** Isskal