@@ -10,7 +10,7 @@ Author = "Safe@Deepwood"
 Website = "http://www.facebook.com/KingBossMods"
 Email = "kingbossmods@gmail.com"
 
-Version = "1.6.0.781"
+Version = "1.6.0.782"
 
 Environment = "3.0"
 
